--- a/colorful-lines/index.html
+++ b/colorful-lines/index.html
@@ -3,8 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>16:9 Canvas</title>
+    <title>colorful lines stretching radially</title>
     <link rel="stylesheet" href="styles.css" />
+    <script defer type="module" src="script.module.js"></script>
   </head>
   <body>
     <div id="canvasContainer">
@@ -13,21 +14,20 @@
     <div class="flexbox">
       <label for="numberLines">
         <input id="numberLines" type="number" value="50" min="0" max="1000" />
-        라인 수
+        Lines
       </label>
       <label for="startColor">
         <input id="startColor" type="color" value="#ff0000" />
-        시작 컬러
+        Color 1
       </label>
       <label for="endColor">
         <input id="endColor" type="color" value="#ffff00" />
-        끝 컬러
+        Color 2
       </label>
     </div>
     <div class="flexbox">
-      <button id="draw">그리기</button>
-      <button id="reset">리셋</button>
+      <button id="draw">Draw</button>
+      <button id="reset">Reset</button>
     </div>
-    <script type="module" src="script.module.js"></script>
   </body>
 </html>
