make index.html for each project

--- a/colorful-lines/index.html
+++ b/colorful-lines/index.html
@@ -8,6 +8,7 @@
     <script defer type="module" src="script.module.js"></script>
   </head>
   <body>
+    <a href="../">뒤로 가기</a>
     <div id="canvasContainer">
       <canvas id="myCanvas"></canvas>
     </div>
