--- a/simple/js/index.html
+++ b/simple/js/index.html
@@ -7,6 +7,7 @@
     <script defer type="module" src="script.module.js"></script>
   </head>
   <body>
+    <a href="../">뒤로 가기</a>
     <canvas id="canvas"></canvas>
     <div id="performance"></div>
     <div class="flexbox">
