--- a/index.html
+++ b/index.html
@@ -4,50 +4,25 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Canvas Playground</title>
-    <style>
-      body {
-        padding-top: 1rem;
-      }
-
-      ul {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: auto;
-        gap: 1rem;
-      }
-
-      li {
-        list-style: disc;
-
-        a::before {
-          content: '📁\00a0';
-          display: inline-block;
-        }
-      }
-
-      /*tablet*/
-      @media (max-width: 1023px) {
-        ul {
-          grid-template-columns: repeat(2, 1fr);
-        }
-      }
-
-      /*mobile*/
-      @media (max-width: 700px) {
-        ul {
-          grid-template-columns: 1fr;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="./style.css" />
+    <script defer src="./index.module.js" type="module"></script>
   </head>
   <body>
-    <ul>
-      <li>
-        <a href="./simple/">Wasm performance</a>
-      </li>
-      <li>
-        <a href="./colorful-lines/">Colorful Lines</a>
-      </li>
-    </ul>
+    <canvas id="canvas"></canvas>
+    <main>
+      <h1>Canvas Playground</h1>
+      <p>
+        This is a collection of canvas experiments. Click on the links below to
+        see the demos.
+      </p>
+      <ul>
+        <li>
+          <a href="./simple/">Wasm performance</a>
+        </li>
+        <li>
+          <a href="./colorful-lines/">Colorful Lines</a>
+        </li>
+      </ul>
+    </main>
   </body>
 </html>
