particle explosion animation

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
         <li>
           <a href="./colorful-lines/">Colorful Lines</a>
         </li>
+        <li>
+          <a href="./particle-explosion/">Particle Explosion</a>
+        </li>
       </ul>
     </main>
   </body>
