--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Canvas Playground</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./styles.css" />
     <script defer src="./index.module.js" type="module"></script>
   </head>
   <body>
@@ -24,6 +24,9 @@
         </li>
         <li>
           <a href="./particle-explosion/">Particle Explosion</a>
+        </li>
+        <li>
+          <a href="./rain-pixel/">Pixel Rain</a>
         </li>
       </ul>
     </main>
