sorting algoritm visualization

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
         <li>
           <a href="./rain-pixel/">Pixel Rain</a>
         </li>
+        <li>
+          <a href="./sorting-algorithm/">Sorting Algorithm Visualization</a>
+        </li>
       </ul>
     </main>
   </body>
