--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
         <li>
           <a href="./sorting-algorithm/">Sorting Algorithm Visualization</a>
         </li>
+        <li>
+          <a href="./2d-raycasting/">2D Raycasting</a>
+        </li>
       </ul>
     </main>
   </body>
