--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         <li>
           <a href="./2d-raycasting/">2D Raycasting</a>
         </li>
+        <li>
+          <a href="./2d-raycast-rendering/">2D Raycast Rendering</a>
+        </li>
       </ul>
     </main>
   </body>
